--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
   <body>
     <!--========== SIDEBAR ==========-->
+    <div class="nav__toggle" id="nav__toggle">
+      <i class="uil uil-bars"></i>
+    </div>
+
+
     <aside class="sidebar" id="sidebar">
       <nav class="nav">
         <div class="nav__logo">
@@ -59,6 +64,10 @@
         </div>
         <div class="btn__share">
           <i class="uil uil-share-alt social__share"></i>
+        </div>
+
+        <div class="nav__close" id="nav-close">
+          <i class="uil uil-times"></i>
         </div>
       </nav>
     </aside>
@@ -686,21 +695,51 @@
         </div>
         <div class="contact__card">
           <i class="uil uil-whatsapp contact__card-icon"></i>
-          <h3 class="contact__card-title">Email</h3>
-          <span class="contact__card-data">userQgamil.cm</span>
+          <h3 class="contact__card-title">Whatsapp3>
+          <span class="contact__card-data">+95111.cm</span>
           <span class="contact__button">
             Write me <i class="uil uil-arrow-right contact__button-icon"></i>
           </span>
         </div>
         <div class="contact__card">
           <i class="uil uil-facebook-messenger contact__card-icon"></i>
-          <h3 class="contact__card-title">Email</h3>
+          <h3 class="contact__card-title">Facebook</h3>
           <span class="contact__card-data">userQgamil.cm</span>
           <span class="contact__button">
             Write me <i class="uil uil-arrow-right contact__button-icon"></i>
           </span>
         </div>
       </div>
+    </div>
+
+    <div class="contact__content">
+      <form action="" class="contact__form">
+        <div class="input__container">
+          <input type="text" class="input">
+          <label for="">username</label>
+          <span>Username</span>
+        </div>
+
+        <div class="input__container">
+          <input type="email" class="input">
+          <label for="">Email</label>
+          <span>Email</span>
+        </div>
+        <div class="input__container">
+          <input type="tel" class="input">
+          <label for="">Telefono</label>
+          <span>Telefono</span>
+        </div>
+        
+        <div class="input__container textarea">
+          <textarea class="input" name="" id="" ></textarea>
+          <label for="">Message</label>
+          <span>Message</span>
+        </div>
+
+        <button href="#contact" class="button"><i class="uil uil-navigator button__icon"></i>Contactame</button>
+ 
+      </form>
     </div>
   </div>
 
@@ -712,6 +751,47 @@
 
 </section>
       <!--===== FOOTER =====-->
+      <footer class="footer">
+        <div class="footer__bg">
+          <div class="footer__container container grid">
+            <div>
+              <h1 class="footer__title">Alexander</h1>
+              <span class="footer__subtitle">Frontend Developer</span>
+            </div>
+            <ul class="footer__links">
+              <li>
+                <a href="#home" class="footer__link ">Home</a>
+              </li>
+              <li>
+                <a href="#about" class="footer__link">About</a>
+              </li>
+              <li>
+                <a href="#skills" class="footer__link">Skills</a>
+              </li>
+              <li>
+                <a href="#work" class="footer__link">Work</a>
+              </li>
+              <li">
+                <a href="#services" class="footer__link">Services</a>
+              </li>
+              
+            </ul>
+
+            <div class="footer__socials">
+              <a href="" target="_blank" class="footer_social">
+                <i class="uil uil-facebook-f"></i>
+              </a>
+              <a href="" target="_blank" class="footer_social">
+                <i class="uil uil-instagram"></i>
+              </a>
+              <a href="" target="_blank" class="footer_social">
+                <i class="uil uil-twitter"></i>
+              </a>
+            </div>
+          </div>
+          <p class="footer__copy">&#169;Alexander,All right reserved</p>
+        </div>
+      </footer>
     </main>
 
     <!--========== SCROLL UP ==========-->
