--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
  </div>
       <!--===== Services =====-->
 <section class="services section" id="services">
-  <h2 data-heading="Servicios" class="section__title">Servicios Ofresidos</h2>
+  <h2 data-heading="Servicios" class="section__title">Servicios Ofrecidos</h2>
 
 <div class="services__container contaier grid">
   <div class="services__content">
