--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </a>
             </div>
           </div>
-          <img src="assets/img/home-img.png" alt="" class="home__img" />
+          <img src="assets/img/home-img-2.png" alt="" class="home__img" />
           <div class="home__data">
             <h1 class="home__title">Hi,I'am Alexander</h1>
             <h3 class="home__subtitle">Frontend developer</h3>
@@ -134,7 +134,7 @@
         <h2 data-heading="My Intro" class="section__title">About Me</h2>
 
         <div class="about__container container grid">
-          <img src="assets/img/about-img.jpg" alt="" class="about__img" />
+          <img src="assets/img/img-about.jpg" alt="" class="about__img" />
           <div class="about__data">
             <h3 class="about__heading">
               Hola, Yo soy Alexander Javier Huaman Guevara
